force-app/main/default/objects/Intel_Docusign_Templates__c/Intel_Docusign_Templates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Intel Docusign Templates</label>
</CustomObject>