force-app/main/default/objects/Intel_Docusign_Templates__c/fields/DocusignExpireAfter__c.field-meta.xml
<CustomField>
    <fullName>DocusignExpireAfter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocusignExpireAfter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>