force-app/main/default/objects/Intel_Docusign_Templates__c/fields/DocusignExpireEnabled__c.field-meta.xml
<CustomField>
    <fullName>DocusignExpireEnabled__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocusignExpireEnabled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>