force-app/main/default/objects/Intel_Docusign_Templates__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>